examples/test/testpolicy15339.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15339
  namespace: namespace450
spec:
  podSelector:
    matchLabels:
      key37: value31
      key11: value36
      key19: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value33
      podSelector:
        matchLabels:
          key30: value4
